--- a/slnHangMan/HangMan.App/Views/Home/Index.cshtml
+++ b/slnHangMan/HangMan.App/Views/Home/Index.cshtml
@@ -1,24 +1,58 @@
 ﻿<div class="jumbotron">
-    <h1>ASP.NET</h1>
-    <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS, and JavaScript.</p>
-    <p><a href="http://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
+    <h1>The Hangman Game 
+        <img src="~/Content/images/10.png" height="40" width="40" /> </h1>
+
 </div>
-<div class="row">
-    <div class="col-md-4">
-        <h2>Getting started</h2>
-        <p>ASP.NET Web API is a framework that makes it easy to build HTTP services that reach
-        a broad range of clients, including browsers and mobile devices. ASP.NET Web API
-        is an ideal platform for building RESTful applications on the .NET Framework.</p>
-        <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301870">Learn more &raquo;</a></p>
+
+<div id="mainView">
+    <div class="row">
+        <div class="col-md-2">
+            <label>Categoria:</label>
+        </div>
+        <div class="col-md-4">
+            <select id="category" class="form-control input-sm"
+                    data-bind="options: Categories,
+                                  optionsText: 'Name',
+                                  optionsValue: 'Id',
+                                  value:CategoryId,
+                                  optionsCaption: 'Elejir...', event:{change:onCategoryChange}"></select>
+        </div>
     </div>
-    <div class="col-md-4">
-        <h2>Get more libraries</h2>
-        <p>NuGet is a free Visual Studio extension that makes it easy to add, remove, and update libraries and tools in Visual Studio projects.</p>
-        <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301871">Learn more &raquo;</a></p>
+    <br />
+    <div class="row">
+        <div class="col-md-2">
+            <label>Letra:</label>
+        </div>
+        <div class="col-md-2" >
+            <input type="text" data-bind="value:singleWord,enable:gameStarted" maxlength="1" style="width:40px;"/>
+            <input type="hidden" id="npic" value="0"  />
+            <button id="btnPlayWord" class="btn btn-default btn-xs" data-bind="click:PlayWord">
+                <span class="glyphicon glyphicon-play"></span>
+            </button>
+        </div>
+        
+
     </div>
-    <div class="col-md-4">
-        <h2>Web Hosting</h2>
-        <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
-        <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301872">Learn more &raquo;</a></p>
+
+    <div class="row">
+        <div id="chars">
+
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="col-lg-9">
+            <span data-bind="text:SelectedWords"></span>
+        </div>
+
+        <div class="col-lg-3">
+            <img   data-bind="attr:{ src:PhotoName }, visible:picVisible"   />
+        </div>
+
     </div>
 </div>
+@section Scripts{
+    <!--ViewModel -->
+    <script src="~/Scripts/App/ViewModels/HomeViewModel.js"></script>
+}
+
