--- a/slnHangMan/HangMan.App/Views/Shared/_Layout.cshtml
+++ b/slnHangMan/HangMan.App/Views/Shared/_Layout.cshtml
@@ -16,12 +16,13 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                @Html.ActionLink("Application name", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
+                @Html.ActionLink("Hangman Game", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("Home", "Index", "Home", new { area = "" }, null)</li>
-                    <li>@Html.ActionLink("API", "Index", "Help", new { area = "" }, null)</li>
+                    <li>@Html.ActionLink("Jugar", "Index", "Home", new { area = "" }, null)</li>
+                    <li>@Html.ActionLink("Categorias", "Index", "Category", new { area = "" }, null)</li>
+                    <li>@Html.ActionLink("Palabras", "Index", "Word", new { area = "" }, null)</li>
                 </ul>
             </div>
         </div>
@@ -30,12 +31,16 @@
         @RenderBody()
         <hr />
         <footer>
-            <p>&copy; @DateTime.Now.Year - My ASP.NET Application</p>
+            <p>&copy; @DateTime.Now.Year - Harvin Adolfo Bejarano</p>
         </footer>
     </div>
 
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/bootstrap")
+
+    <script src="~/Scripts/knockout-3.4.1.js"></script>
+    <script src="~/Scripts/App/main.js"></script>
+
     @RenderSection("scripts", required: false)
 </body>
 </html>
