--- a/slnHangMan/HangMan.App/Views/Home/Index.cshtml
+++ b/slnHangMan/HangMan.App/Views/Home/Index.cshtml
@@ -33,10 +33,9 @@
         
 
     </div>
-
+    <br />
     <div class="row">
-        <div id="chars">
-
+        <div class="col-md-12" id="chars">
         </div>
     </div>
 
